# IA_tensorflow_enseirb2024

./: .gitignore  EN343_TP.pdf:Zone.Identifier  Projet.ipynb  README.md  rapport.html  rapport.ipynb
C_export/: CMakeLists.txt  TraitementImage.h  USAGE.txt  activation.c  activation.h  display_img.py  fdeep_model.json  fdeep_model_mnist.json  fdeep_model_mnist_autremodel.json  main.c  main.cpp  model.c  model.h  model_test_suite.cnon  modelconv2d_1_bias_array.csv  modelconv2d_1_kernel_array.csv  modelconv2d_1_output_array.csv  modelconv2d_bias_array.csv  modelconv2d_kernel_array.csv  modelconv2d_output_array.csv  modeldense_bias_array.csv  modeldense_kernel_array.csv  modelflatten_output_array.csv  modelmax_pooling2d_output_array.csv
C_export/include/: Bmp2Matrix.cpp  Bmp2Matrix.hpp  TraitementImage.cpp  TraitementImage.hpp  k2c_activations.c  k2c_convolution_layers.c  k2c_core_layers.c  k2c_helper_functions.c  k2c_include.h  k2c_merge_layers.c  k2c_pooling_layers.c  k2c_recurrent_layers.c  k2c_tensor_include.h
results/: bias_0.txt  bias_0_<keras.src.layers.convolutional.conv2d.Conv2D object at 0x7f13c965b1c0>.txt  bias_0_<keras.src.layers.convolutional.conv2d.Conv2D object at 0x7ff902a50940>.txt  bias_2_<keras.src.layers.convolutional.conv2d.Conv2D object at 0x7f13c95d4490>.txt  bias_2_<keras.src.layers.convolutional.conv2d.Conv2D object at 0x7ff902a503d0>.txt  bias_2_<keras_src_layers_convolutional_conv2d_Conv2D_object_at_0x7fb00e644e80>.txt  bias_5_<keras.src.layers.core.dense.Dense object at 0x7f13c95d53f0>.txt  keras_mnist_base+mnist+autremodel.keras  (+52 more)
(+12 files in other folders)
