cmake_minimum_required(VERSION 3.0..4.0)
project(ProjetSimple CXX)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall -lstdc++ -lm -lSDL2main -lSDL2")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -lstdc++ -lm -lSDL2main -lSDL2 ")
find_package(SDL REQUIRED)
include_directories(include ${SDL_INCLUDE_DIRS})
# file(GLOB_RECURSE SRC_FILES ./*.c)
file(GLOB SRC_FILES ./*.c ./*.h ./*.hpp ./*.cpp ./include/*.c ./include/*.h ./include/*.hpp ./include/*.cpp)
add_executable(aaa ${SRC_FILES})
target_link_libraries(aaa m ${SDL_LIBRARIES}) 
target_include_directories(aaa PRIVATE include)
#set_target_properties(aaa PROPERTIES LINKER_LANGUAGE CXX)